--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
 
   <div class="container">
-    <h1>Refresh Me</h1>
+    <h1>Click the button to play</h1>
+
+    <div>
+      <button>Play</button>
+    </div>
+
 
     <div class="dice">
       <p>Player 1</p>
