--- a/index.html
+++ b/index.html
@@ -2,42 +2,35 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dice Game</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet" />
 </head>
 
 <body>
-
   <div class="container">
+    
     <h1>Click the button to play</h1>
 
-    <div>
-      <button>Play</button>
-    </div>
-
+    <button>Play</button>
 
     <div class="dice">
       <p>Player 1</p>
-      <img class="img1" src="images/dice6.png">
+      <img class="img1" src="images/dice6.png" />
     </div>
 
     <div class="dice">
       <p>Player 2</p>
-      <img class="img2" src="images/dice6.png">
+      <img class="img2" src="images/dice6.png" />
     </div>
-
   </div>
 
   <script src="app.js"></script>
 </body>
 
-<footer>
-  🎲 Rosen Dobrev 2022 🎲
-</footer>
+<footer>🎲 Rosen Dobrev 2022 🎲</footer>
 
 </html>
